fix: cors issue for browser requests